Bug 1355520 - Unregister system listener on destroy to avoid collisions. r=kinetik, a=jcristau

--HG--
extra : rebase_source : fb9ea9745ba00988a5b4c358642df36c0bd62484