media/libcubeb/update.sh
@@ -81,3 +81,6 @@ patch -p3 < ./fix-crashes.patch
 
 echo "Applying a patch on top of $version"
 patch -p3 < ./uplift-part-of-f07ee6d-esr52.patch
+
+echo "Applying a patch on top of $version"
+patch -p3 < ./uplift-system-listener-patch.patch
